changed icon visibty to correct and now does by class

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -33,7 +33,7 @@
   background-color: transparent;
   width:13%;
   height: 30%;
-  x:25;
+  x:27;
   y:45;
 }
 
